added an overview guide separate from issuance guide

--- a/site/docs/tbdex/index.mdx
+++ b/site/docs/tbdex/index.mdx
@@ -44,7 +44,7 @@ There are essentially three types of actors involved in a tbDEX network:
 
 * **[Wallet Apps:](/docs/tbdex/wallet/overview)** These hold identifiers and credentials, acting as an agent to facilitate exchanges on behalf of a person seeking liquidity
 * **[PFIs:](/docs/tbdex/pfi/overview)** The entities offering liquidity services on a tbDEX network
-* **VC Issuers:** Organizations that act as sources of verifiable credentials
+* **[VC Issuers:](/docs/tbdex/issuer/overview)** Organizations that act as sources of verifiable credentials
 
 ### Messages
 
