--- a/site/docs/tbdex/issuer/vc-issuance.mdx
+++ b/site/docs/tbdex/issuer/vc-issuance.mdx
@@ -25,7 +25,7 @@ If you need to create a Credential Issuance app from scratch, continue on with t
 
 
 ### Install Express
-We'll use **Express** to set up the VC issuance service. Follow these instructions to [install Express](https://expressjs.com/en/starter/installing.html). 
+We'll use Express to set up the VC issuance service. Follow these instructions to [install Express](https://expressjs.com/en/starter/installing.html). 
 
 ### Install Credentials Package
 You'll also need to install `@web5/credentials` to create and issue credentials:
