adding link to new guide in overview

--- a/site/docs/tbdex/index.mdx
+++ b/site/docs/tbdex/index.mdx
@@ -82,7 +82,8 @@ Alice holds a digital wallet that securely manages her identity, including her i
 3. The **Credential Issuer** (if applicable) issues the required VCs to Alice, which are stored in her wallet.
     <details>
     <summary>Related Guides</summary>
-
+    
+    * [Setup Credential Issuance Service](/docs/tbdex/issuer/vc-issuance)
     * [Issue a VC](/docs/web5/build/verifiable-credentials/vc-issuance)
 
     </details>
