Add additional protocol actions to API guide

--- a/site/api/web5-js/dwn/protocols.mdx
+++ b/site/api/web5-js/dwn/protocols.mdx
@@ -118,7 +118,7 @@ Configures a protocol definition in the user's local DWN, remote DWN, or another
                                                                               data: {
                                                                                 type: 'string',
                                                                                 field: 'can',
-                                                                                value: 'The action that the actor can perform. May be \'read\' | \'write\'',
+                                                                                value: 'The action that the actor can perform. May be \'read\' | \'write\'| \'update\'| \'delete\'',
                                                                               }
                                                                             },
                                                                         ]}
