--- a/site/docs/tbdex/index.mdx
+++ b/site/docs/tbdex/index.mdx
@@ -44,7 +44,7 @@ There are essentially three types of actors involved in a tbDEX network:
 
 * **[Wallet Apps:](/docs/tbdex/wallet/overview)** These hold identifiers and credentials, acting as an agent to facilitate exchanges on behalf of a person seeking liquidity
 * **[PFIs:](/docs/tbdex/pfi/overview)** The entities offering liquidity services on a tbDEX network
-* **VC Issuers:** Organizations that act as sources of verifiable credentials
+* **[VC Issuers:](/docs/tbdex/issuer/overview)** Organizations that act as sources of verifiable credentials
 
 ### Messages
 
@@ -82,7 +82,8 @@ Alice holds a digital wallet that securely manages her identity, including her i
 3. The **Credential Issuer** (if applicable) issues the required VCs to Alice, which are stored in her wallet.
     <details>
     <summary>Related Guides</summary>
-
+    
+    * [Setup Credential Issuance Service](/docs/tbdex/issuer/vc-issuance)
     * [Issue a VC](/docs/web5/build/verifiable-credentials/vc-issuance)
 
     </details>
