update language to use allowlist instead of whitelist

--- a/site/docs/tbdex/index.mdx
+++ b/site/docs/tbdex/index.mdx
@@ -74,7 +74,7 @@ Alice holds a digital wallet that securely manages her identity, including her i
     <summary>Related Guides</summary>
 
     * [Onboard as PFI](/docs/tbdex/pfi/onboarding)
-    * [Whitelist PFIs](/docs/tbdex/wallet/whitelist-pfis)
+    * [Allowlist PFIs](/docs/tbdex/wallet/allowlist-pfis)
     * [Present Credentials](/docs/tbdex/wallet/managing-credentials)
 
     </details>
