Point to external API Docs for tbDEX

--- a/site/docs/api.mdx
+++ b/site/docs/api.mdx
@@ -5,10 +5,15 @@ import ApiCard from '@site/src/components/ApiCard';
 
 <div>
   <div className="grid grid-cols-1 desktop:grid-cols-2 gap-4 pt-6">
-  <ApiCard
+    <ApiCard
       url="/api/web5-js"
       name="Web5 JS SDK"
       description="A library to build decentralized apps at scale. It abstracts away much of the heavy-lifting and aims to make building Web5 apps as close to effortless as possible."
+    />
+    <ApiCard
+      url="https://tbd54566975.github.io/tbdex-js/index.html"
+      name="tbDEX JS SDK"
+      description="A library to build financial applications that facilitate the smooth transfer of currencies across borders."
     />
     <ApiCard
       url="/docs/apis/ssi-service"
