updating routing technique

--- a/site/docs/tbdex/api_ref.mdx
+++ b/site/docs/tbdex/api_ref.mdx
@@ -4,3 +4,5 @@ title: API Reference
 ---
 
 Redirecting...
+
+<meta http-equiv="refresh" content="0; URL='https://tbd54566975.github.io/tbdex-js/index.html'" />
