added clickable link as fail safe

--- a/site/docs/tbdex/api_ref.mdx
+++ b/site/docs/tbdex/api_ref.mdx
@@ -3,6 +3,6 @@ sidebar_position: 1
 title: API Reference
 ---
 
-Redirecting...
+Redirecting... if you're still reading this [click here](https://tbd54566975.github.io/tbdex-js/index.html)
 
 <meta http-equiv="refresh" content="0; URL='https://tbd54566975.github.io/tbdex-js/index.html'" />
