--- a/site/docs/tbdex/pfi/onboarding.mdx
+++ b/site/docs/tbdex/pfi/onboarding.mdx
@@ -25,3 +25,5 @@ const did = await DidDhtMethod.create({
 ```
 
 Note that the value for `serviceEndpoint` should be the URL to your PFI's service entry.
+
+Because you may be handling sensitive data on behalf of your users, be sure to understand proper [key management](/docs/web5/build/decentralized-identifiers/how-to-create-did/) before launching your PFI.
