--- a/site/blog/2023-06-23-did-hack.md
+++ b/site/blog/2023-06-23-did-hack.md
@@ -12,7 +12,7 @@ tags: [Web5, DIF, Hackathon]
   <meta property="og:type" content="website" />
   <meta property="og:url" content='https://developer.tbd.website/blog/did-hack' />
   <meta name="og:description" content="A team of hackathon participants won 1st place with their Web5 personal finance app" />
-  <meta property="og:image" content="https://developer.tbd.website/assets/images/did-hack-slide0-5addd78e440bfc325b239bbfff2ae82f.png" /> 
+  <meta property="og:image" content="https://developer.tbd.website/assets/images/did-hack-slide0-5addd78e440bfc325b239bbfff2ae82f.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
   <meta property="twitter:domain" content="developer.tbd.website" />
@@ -33,22 +33,7 @@ The Decentralized Identity Foundation organized [did:hack](https://didhack.xyz/)
 
 The 4-day virtual event included sessions from TBD, SpruceID, Dock.io, Aviary Tech, Trinsic, and Danube Tech - all providing educational sessions on ecosystem tools that enable decentralized identity and verifiable credentials.
 
-
-<div className="flex justify-center">
-<div className="w-full sm:w-auto sm:max-w-[560px]">
-<div className="overflow-hidden relative" style={{ paddingTop: "56.25%" }}>
-<iframe 
- width="560"
-height="315"
-src="https://www.youtube.com/embed/rpaUtaXnk94" 
-title="YouTube video player"
-frameBorder="0"
-allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-allowfullscreen
-className="absolute top-0 left-0 w-full h-full"></iframe>
-</div>
-</div>
-</div>
+<iframe class="aspect-video" src="https://www.youtube.com/embed/rpaUtaXnk94" title="did:hack" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 <!--truncate-->
 
@@ -56,12 +41,12 @@ className="absolute top-0 left-0 w-full h-full"></iframe>
 
 Hackathon participants gathered in small teams to build projects centered around decentralized identity. There were some amazing ideas including:
 
-* `did:loc`, a privacy preserving location sharing DID method
-* a decentralized personal finance app using [Web5](/docs)
-* a mobile voting app that allows people to cast a vote from a mobile phone, and verifies a voter's eligibility with a verifiable credential that belongs to a DID
-* a browser extension to display and verify DID and Verifiable Presentation data for the currently viewed website
-* `did-bsv`, a DID method for verifiable ordinals
-* a decentralized housing platform using DIDs and VCs for reputation tracking
+- `did:loc`, a privacy preserving location sharing DID method
+- a decentralized personal finance app using [Web5](/docs)
+- a mobile voting app that allows people to cast a vote from a mobile phone, and verifies a voter's eligibility with a verifiable credential that belongs to a DID
+- a browser extension to display and verify DID and Verifiable Presentation data for the currently viewed website
+- `did-bsv`, a DID method for verifiable ordinals
+- a decentralized housing platform using DIDs and VCs for reputation tracking
 
 Fortunately, the [presentations of the projects](https://youtu.be/0o9PJ1HmNuQ) were recorded.
 
@@ -77,33 +62,4 @@ D-PFin, a team comprised of [Moises Jaramillo](https://www.linkedin.com/in/moise
 
 We're delighted that the D-PFin team chose Web5 to build their decentralized app! It's a testament of the power of coupling decentralized personal data stores with decentralized identity. Be sure to watch the team's final presentation below.
 
-
-<div className="flex justify-center">
-  <div className="w-full sm:w-auto sm:max-w-[560px]">
-    <div className="overflow-hidden relative" style={{ paddingTop: "56.25%" }}>
-      <iframe
-        width="560"
-        height="315"
-        src="https://www.youtube.com/embed/0o9PJ1HmNuQ?start=1500"
-        title="YouTube video player"
-        frameBorder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        allowfullscreen
-        className="absolute top-0 left-0 w-full h-full"
-      ></iframe>
-    </div>
-  </div>
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
+<iframe class="aspect-video" src="https://www.youtube.com/embed/0o9PJ1HmNuQ?start=1500" title="d-pfin" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
