--- a/site/docs/web5/troubleshooting/common-errors.mdx
+++ b/site/docs/web5/troubleshooting/common-errors.mdx
@@ -112,7 +112,7 @@ This error occurs when attempting to interact with a DWN that does not have the 
 
 ## Error: Wrong tag
 
-TThis error occurs due to a mismatch between encryption and decryption keys. To resolve:
+This error occurs due to a mismatch between encryption and decryption keys. To resolve:
 
 * **In a browser:** Clear the browser cache and retry.
 * **In a Node.js app:** Delete the `DATA` folder and retry.
