Troubleshooting Guide: Wrong tag error (#1150)
* Troubleshooting Guide: Wrong tag error

* Update site/docs/web5/troubleshooting/common-errors.mdx

Co-authored-by: Angie Jones <jones.angie@gmail.com>

* typo

---------

Co-authored-by: Angie Jones <jones.angie@gmail.com>

--- a/site/docs/web5/troubleshooting/common-errors.mdx
+++ b/site/docs/web5/troubleshooting/common-errors.mdx
@@ -109,3 +109,10 @@ This error occurs when you attempt to sign a verifiable credential using the Str
 ## Error: ProtocolAuthorizationProtocolNotFound: unable to find protocol definition
 
 This error occurs when attempting to interact with a DWN that does not have the required protocol installed. To solve this, **ensure both parties have successfully [installed the protocol definition](/docs/web5/learn/protocols#installing-a-protocol)**.
+
+## Error: Wrong tag
+
+This error occurs due to a mismatch between encryption and decryption keys. To resolve:
+
+* **In a browser:** Clear the browser cache and retry.
+* **In a Node.js app:** Delete the `DATA` folder and retry.
