--- a/site/docs/tbdex/pfi/creating-quotes.mdx
+++ b/site/docs/tbdex/pfi/creating-quotes.mdx
@@ -102,6 +102,6 @@ this.write({ message: quote as Quote})
 
 
 :::note
-Wallets are not pushed updates about Quotes because wallets are not addressable. 
-Therefore the Wallet will need to poll your PFI to get the Quote from you.
+Wallet Applicationss are not addressable, and therefore are not pushed updates about Quotes. 
+Therefore the Wallet Application will need to poll the PFI to get the Quote.
 :::
