--- a/site/docs/tbdex/wallet/allowlist-pfis.mdx
+++ b/site/docs/tbdex/wallet/allowlist-pfis.mdx
@@ -10,7 +10,7 @@ Allowlisting is the process of approving or recognizing specific PFIs as trusted
 This is a recommended security measure to ensure that your application interacts only with verified and reliable PFIs within the tbDEX network.
 
 
-Here are general steps your app should follow to allowlist PFIs:
+Here are general steps your application should follow to allowlist PFIs:
 
 ## Identify Potential PFIs
 Research and identify PFIs that align with the types of transactions you'd like to offer to your customers.
