--- a/site/docs/tbdex/wallet/get-offerings.mdx
+++ b/site/docs/tbdex/wallet/get-offerings.mdx
@@ -5,7 +5,7 @@ sidebar_position: 5
 # Get Offerings
 
 An [Offering](/docs/tbdex/pfi/creating-offerings#offering-object) describes a currency pair that can be exchanged. 
-They also specify any requirements, conditions, and constraints needed to fulfill the described swap. 
+They also specify any requirements, conditions, and constraints needed to fulfill the described transaction. 
 This can include exchange rates, minimum and maximum transaction sizes, and other relevant details.
 
 In other words, an Offering is a way of describing a financial product that a PFI is offering on a tbDEX network. 
