--- a/site/docs/tbdex/wallet/managing-credentials.mdx
+++ b/site/docs/tbdex/wallet/managing-credentials.mdx
@@ -4,7 +4,7 @@ sidebar_position: 6
 
 # Managing Credentials
 
-Within a tbDEX network, [Verifiable Credentials (VC)](/docs/web5/learn/verifiable-credentials) play a critical role in establishing trust and ensuring regulatory compliance during transactions, particularly ones involving fiat currencies.
+Within a tbDEX network, [Verifiable Credentials (VC)](/docs/web5/learn/verifiable-credentials) play a critical role in establishing trust and ensuring regulatory compliance during transactions.
 
 VCs are digital proofs that may be required by PFIs in order to verify your customers. 
 So, your application will serve as an agent who presents a customer's credentials to a PFI as part of the transaction flow.
