--- a/site/docs/tbdex/wallet/overview.mdx
+++ b/site/docs/tbdex/wallet/overview.mdx
@@ -4,17 +4,16 @@ sidebar_position: 1
 
 # Wallet Overview
 
-Wallet applications serve as agents in facilitating exchanges for individuals seeking liquidity within the tbDEX network. 
-These applications leverage the tbDEX protocol to establish and manage a curated network of [Participating Financial Institutions (PFIs)](/docs/tbdex/pfi/overview). 
-This network is instrumental in providing compliant and seamless currency exchanges across various systems and international borders.
+Wallet applications serve as agents in facilitating transactions for individuals seeking liquidity offered by [Participating Financial Institutions (PFIs)](/docs/tbdex/pfi/overview). 
+This network is instrumental in providing compliant and seamless transactions across various systems and international borders.
 
 As intermediaries, Wallets often manage [decentralized identifiers (DIDs)](/docs/web5/learn/decentralized-identifiers) and [verifiable credentials (VCs)](/docs/web5/learn/verifiable-credentials) on behalf of their users. 
-These elements are essential for identity verification and are strategically utilized during exchanges to ensure security and compliance with regulatory standards.
+These elements are essential for identity verification and are strategically utilized during transactions to ensure security and compliance with regulatory standards.
 
 For a comprehensive understanding of how Wallet applications integrate and function within the broader tbDEX ecosystem, we recommend referring to the [tbDEX overview](/docs/tbdex/#example-scenario).
 
-The Wallet guides are designed to equip you with the necessary insights and tools to build your network of liquidity providers. 
-This network will enable you to effectively meet the diverse financial needs of your customers, fostering a secure and efficient transaction environment.
+The Wallet guides are designed to equip you with the necessary insights and tools to build your network of PFIs. 
+This network enables you to effectively meet the diverse financial needs of your customers, fostering a secure and efficient transaction environment.
 
 ## Recommended Path
 
