--- a/site/docs/tbdex/wallet/send-rfq.mdx
+++ b/site/docs/tbdex/wallet/send-rfq.mdx
@@ -5,7 +5,7 @@ sidebar_position: 7
 # Sending RFQs
 
 After your customer selects an Offering, the next step is to send a **Request for Quote (RFQ)** to the PFI in order to initiate the transaction.
-The Offering provided an estimate, but the Quote will provide a formal offer based on the financial exchange the customer is requesting as well as the payment methods provided.
+The Offering provided an estimate, but the Quote will provide a formal offer based on the financial transaction the customer is requesting as well as the payment methods provided.
 
 ## Create the RFQ
 An RFQ is a structured tbDEX message that specifies the details of the transaction your customer wishes to make. 
